# cpp_ex4_pandemic_b

./: CMakeLists.txt  main.cpp  test1  test2  test3
sources/: Board.cpp  Board.hpp  Dispatcher.cpp  Dispatcher.hpp  FieldDoctor.cpp  FieldDoctor.hpp  GeneSplicer.cpp  GeneSplicer.hpp  Medic.cpp  Medic.hpp  OperationsExpert.hpp  Player.cpp  Player.hpp  Researcher.cpp  Researcher.hpp  Scientist.cpp  Scientist.hpp  Virologist.cpp  Virologist.hpp
